# script-to-film-platform

./: .env.example  .gitignore  API_KEYS_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_FLOW_GUIDE.md  GIT_SETUP_STEPS.md  Makefile  README.md  RUNWAY_INTEGRATION.md  SETUP_GUIDE.md  TEXT_TO_VIDEO_RESEARCH.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: WORKFLOW_CHEATSHEET.md  pull_request_template.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  SceneBreakdown.tsx  ScriptDisplay.tsx  ScriptGenerator.tsx  VideoPrompts.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
src/script_to_film/: __init__.py  main.py
src/script_to_film/api/: routes.py
src/script_to_film/config/: settings.py
src/script_to_film/models/: __init__.py  script.py  video.py
src/script_to_film/services/: ai_service.py  script_parser.py  video_generator.py
src/script_to_film/utils/: logger.py
tests/unit/: test_script_parser.py
